libdbusmenu (12.10.3-0ubuntu1) UNRELEASED; urgency=low

  * debian/control:
    - Reorganize Build-Depends for clarity.
    - Update style to match other indicator stack packages. 
    - Drop Build-Depends on cdbs. 
    - Bump debhelper Build-Depends to (>= 9).

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Wed, 21 Nov 2012 13:17:02 -0500

libdbusmenu (12.10.2-0ubuntu1) quantal; urgency=low

  * New upstream release.

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 03 Oct 2012 21:23:18 +0200

libdbusmenu (12.10.1-0ubuntu2) quantal-proposed; urgency=low

  * Backport upstream fix for segfault issue (lp: #1053670)

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 24 Sep 2012 21:36:35 +0200

libdbusmenu (12.10.1-0ubuntu1) quantal; urgency=low

  * New upstream release.
    - Honor changes to GtkSettings' gtk-menu-images value (LP: #927236)
    - don't display an underscore on menuitimes containing a '&' (LP: #994564)
    - set the widget for the accelerator even if there isn't a mnemonic
      (LP: #982656)
    - Some platforms don't have valgrind, so treat those unit tests separately
    - make headers match independent of the build directory
    - constify some public API calls

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 20 Sep 2012 19:22:52 +0200

libdbusmenu (0.6.2-0ubuntu1) quantal; urgency=low

  * New upstream release.
    * Fixed duplicated underscores in menus (LP: #979301)
    * Fix for keybindings not showing in menus bug (LP: #982656)
    * DbusmenuServer leaks private string (LP: #981766)
    * Ensure menuitems with '&' show them properly (LP: #994564)

 -- Ted Gould <ted@ubuntu.com>  Wed, 13 Jun 2012 14:44:52 -0500

libdbusmenu (0.6.1-0ubuntu3) precise-proposed; urgency=low

  * Backport fix for keybindings not showing in menus bug (lp: #982656)

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 16 Apr 2012 21:28:05 +0200

libdbusmenu (0.6.1-0ubuntu2) precise; urgency=low

  * libdbusmenu-gtk/genericmenuitem.c