@@ -5,6 +5,10 @@ libdbusmenu (12.10.3-0ubuntu1) UNRELEASED; urgency=low
     - Update style to match other indicator stack packages. 
     - Drop Build-Depends on cdbs. 
     - Bump debhelper Build-Depends to (>= 9).
+  * debian/rules:
+    - Convert to dh9; some variables where kept but renamed to brevity.
+    - Override dh_autoreconf to make sure it calls autogen.sh, and doesn't run
+      configure.
 
  -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Wed, 21 Nov 2012 13:17:02 -0500
 
